v2.4
- úprava inicializácie po zmenách v závislostiach doplnku

v2.3
- rozšírenie podporovaných video formátov z ok.ru

v2.2
- pridanie podpory pre on-demand video formát na ok.ru

v2.1
- oprava prehrávania pre python 2

v2.0
- kompletný prepis doplnku po zmenách na stránke
- podporované sú videá na ok.ru, youtube a dailymotion
- odporúčaný je prehrávač exteplayer3
- prehrávanie je dostupné len pre podporovateľov ArchivCZSK

v1.9
- oprava pádu pri nepodporovanom poskytovateľovi

v1.8
- oprava pádu pri nesprávnom formáte URL

v1.7
- oprava pádu pri vyhľadávaní s diakritikou a práznymi znakmi

v1.6
- priadnie podpory pre virtuálne profily v ArchivCZSK >= 2.5.0

v1.5
- aktualizácia po zmenách api na strane ArchivCZSK

v1.4
- konverzia na module pre archivCZSK >= 2.0.0

v1.3
- drobné opravy

v1.2
- fixed module loading addon dependencies

v1.1
- make addon python 3.x compatible

v1.0
- initial release