@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.dokumenty.tv" name="Dokumenty.tv" version="2.4">
+<addon id="plugin.video.dokumenty.tv" name="dokufilmy.cz" version="2.4">
 	<requires>
 		<import addon="enigma2.archivczsk" version="3.4.9"/>
 		<import addon="tools.archivczsk" version="3.0" />
